force-app/main/default/objects/PromoterShare__c/PromoterShare__c.object-meta.xml
<CustomObject>
    <label>Brand Share</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Promoter Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Shares</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>