force-app/main/default/objects/PromoterShare__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(3) OR ( NOT (3) AND (1 AND 2))</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>notEqual</operation>
            <value>Hisense</value>
        </filterItems>
        <filterItems>
            <field>$Source.HisenseFlag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promoter Share</relationshipLabel>
    <relationshipName>Promoter_Share</relationshipName>
    <type>Lookup</type>
</CustomField>