force-app/main/default/objects/PromoterShare__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Promoter Share</relationshipLabel>
    <relationshipName>Promoter_Share</relationshipName>
    <type>Lookup</type>
</CustomField>