force-app/main/default/objects/PromoterShare__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promoter Share (Customer)</relationshipLabel>
    <relationshipName>PromoterShare1</relationshipName>
    <type>Lookup</type>
</CustomField>