force-app/main/default/objects/PromoterShare__c/fields/HisenseFlag__c.field-meta.xml
<CustomField>
    <fullName>HisenseFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hisense Flag</label>
    <type>Checkbox</type>
</CustomField>