force-app/main/default/objects/PromoterShare__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Promoter Share</relationshipLabel>
    <relationshipName>Promoter_Share</relationshipName>
    <type>Lookup</type>
</CustomField>