force-app/main/default/objects/PromoterShare__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research</label>
    <referenceTo>Research__c</referenceTo>
    <relationshipLabel>Promoter Share</relationshipLabel>
    <relationshipName>Promoter_Share</relationshipName>
    <type>Lookup</type>
</CustomField>