force-app/main/default/objects/PromoterShare__c/fields/Shelf__c.field-meta.xml
<CustomField>
    <fullName>Shelf__c</fullName>
    <label>Shelf</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>