force-app/main/default/objects/PromoterShare__c/recordTypes/InHouseShare.recordType-meta.xml
<RecordType>
    <fullName>InHouseShare</fullName>
    <active>true</active>
    <label>In House Share</label>
</RecordType>