force-app/main/default/objects/PromoterShare__c/recordTypes/ShelfShare.recordType-meta.xml
<RecordType>
    <fullName>ShelfShare</fullName>
    <active>true</active>
    <label>Shelf Share</label>
</RecordType>